fix alignment bug from lesson 1-20

--- a/level4-A/lesson-02/main.scss
+++ b/level4-A/lesson-02/main.scss
@@ -217,7 +217,6 @@ body {
         padding: 5px;
       }
       td {
-        color: #d0cece;
         text-align: left;
         padding: 6px;
         background-color: $background-grey;
