--- a/level4-A/lesson-11/main.scss
+++ b/level4-A/lesson-11/main.scss
@@ -11,22 +11,23 @@ $left-pixel: clamp(50px, 14%, 126.5px);
 body {
   margin: 0;
   padding: 0;
+}
+.html-lesson-wrapper {
+  width: 100%;
+  min-width: 360px;
+  max-width: 100%;
+  max-width: 892.75px;
+  min-height: 1200px;
+  height: fit-content;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 62px;
+  background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/bg-header.png'), url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/04-bg-footer.png');
+  background-position: top, bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-family: $text-font;
 
-  .html-lesson-wrapper {
-    width: 100%;
-    min-width: 360px;
-    max-width: 892.75px;
-    min-height: 1200px;
-    height: fit-content;
-    overflow: hidden;
-    position: relative;
-    padding-bottom: 62px;
-    background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/bg-header.png'), url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/04-bg-footer.png');
-    background-position: top, bottom;
-    background-size: contain;
-    background-repeat: no-repeat;
-    font-family: $text-font;
-  }
   header {
     font-family: $title-font;
   }
@@ -36,8 +37,8 @@ body {
   .i {
     font-family: italic;
   }
-  .u {
-    text-decoration: underline;
+  .fwb {
+    font-weight: 600;
   }
   .program-rank {
     position: absolute;
@@ -68,7 +69,8 @@ body {
   }
   .lesson-number {
     position: absolute;
-    left: 91.65%;
+    left: 91.7%;
+    top: 0px;
     margin-top: 7.4%;
     font-size: clamp(7px, 1.8vw, 13px);
     color: #ffffff;
@@ -137,7 +139,8 @@ body {
     .section {
       margin-left: $left-pixel;
       line-height: 1.8em;
-      margin-top: clamp(10px, 2.6vw, 18px) !important;
+      margin-top: clamp(11px, 2.5vw, 15px) !important;
+      max-width: 100px;
     }
 
     .pointers {
@@ -168,7 +171,6 @@ body {
     }
   }
 
-  // See
   .see-content {
     margin-top: 36px;
     .article {
@@ -215,34 +217,9 @@ body {
     margin-top: 36px;
     height: fit-content;
 
-    table {
-      margin-top: 5px;
-      font-size: clamp(6px, 1.5vw, 14px);
-      border-spacing: 0px;
-      padding-bottom: 5px;
-      width: 100%;
-      th,
-      td {
-        max-width: 120px;
-        min-width: 80px;
-        word-wrap: break-word;
-        border: 1px solid #ffffff;
-      }
-      th {
-        background-color: $primary;
-        color: #ffffff;
-        font-size: clamp(7px, 1.8vw, 15px);
-        padding: 5px;
-
-        &:first-child {
-          width: 400px;
-        }
-      }
-      td {
-        text-align: left;
-        padding: 4px;
-        background-color: $background-grey;
-      }
+    p {
+      margin: 2px auto;
+      line-height: clamp(12px, 2.8vw, 24px);
     }
   }
 
@@ -260,7 +237,7 @@ body {
 
 @media screen and (max-width: 900px) {
   .html-lesson-wrapper {
-    min-height: unset !important;
+    min-height: unset;
     .see-content {
       margin-top: clamp(22px, 3.8vw, 36px);
       .article {
@@ -278,8 +255,9 @@ body {
     }
     .try-content {
       margin-top: clamp(20px, 3.7vw, 30px);
+      // padding-left: clamp(11px, 2.4vw, 18px);
       ul {
-        margin-left: clamp(1px, 2vw, 18px);
+        margin-left: clamp(11px, 2.4vw, 18px);
       }
       li {
         padding-left: clamp(9px, 1.8vw, 13px);
@@ -337,6 +315,11 @@ body {
     .line {
       margin: 0 6px;
       vertical-align: middle;
+    }
+    .words-phrase-content {
+      .section {
+        max-width: 52px;
+      }
     }
     .arrow-part {
       &:before {
